--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -7,7 +7,22 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>onlineshopping Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
+  <properties>
+ 	<javaee.version>5</javaee.version>
+  </properties>
+  
   <dependencies>
+  
+  	<!-- JAVA EE API -->
+  	<dependency>
+	    <groupId>javaee</groupId>
+	    <artifactId>javaee-api</artifactId>
+	    <version>${javaee.version}</version>
+	    <scope>provided</scope>
+	</dependency>  	
+  	
+  	<!-- jUnit -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -16,6 +31,18 @@
     </dependency>
   </dependencies>
   <build>
+	<plugins>
+		<!-- Update to latest version of java -->
+		<plugin>
+        	<artifactId>maven-compiler-plugin</artifactId>
+        	<version>3.1</version>
+        	<configuration>
+        		<source>1.8</source>
+        		<target>1.8</target>
+        	</configuration>
+        </plugin>
+	</plugins>  
+  
     <finalName>onlineshopping</finalName>
   </build>
 </project>
